updated Java backend API artifacts
